cluster/studybuddy/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studybuddy-nats
  namespace: studybuddy
  labels:
    app.kubernetes.io/name: studybuddy-nats
    app.kubernetes.io/component: messaging
    app.kubernetes.io/part-of: studybuddy
spec:
  type: ClusterIP
  ports:
    - name: client
      port: 4222
      targetPort: client
      protocol: TCP
    - name: monitor
      port: 8222
      targetPort: monitor
      protocol: TCP
  selector:
    app.kubernetes.io/name: studybuddy-nats
